--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -3238,7 +3238,7 @@
             cleanCommand="rm -rf"
             id="org.eclipse.cdt.cross.arc.gnu.eb.linux.configuration.base"
             name="GNU Toolchain for ARC EM (big-endian) Configuration"
-            parent="org.eclipse.cdt.cross.arc.gnu.configuration.base">
+            parent="org.eclipse.cdt.cross.arc.gnu.eb.configuration.base">
          <enablement
                attribute="artifactExtension"
                extensionAdjustment="false"
@@ -3807,9 +3807,9 @@
       </builder>
       <configuration
             cleanCommand="rm -rf"
-            id="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base"
+            id="org.eclipse.cdt.cross.arc.gnu.hs.linux.configuration.base"
             name="GNU Toolchain for ARC HS Configuration"
-            parent="org.eclipse.cdt.cross.arc.gnu.configuration.base">
+            parent="org.eclipse.cdt.cross.arc.gnu.configuration.base.hs">
          <enablement
                attribute="artifactExtension"
                extensionAdjustment="false"
@@ -4098,7 +4098,7 @@
                buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug"
                id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.debug"
                name="Debug"
-               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base.hs">
+               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
             <toolChain
                   id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.toolchain.debug"
                   isAbstract="false"
@@ -4158,7 +4158,7 @@
                buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release"
                id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.release"
                name="Release"
-               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base.hs">
+               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
             <toolChain
                   id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.toolchain.release"
                   isAbstract="false"
@@ -4767,9 +4767,9 @@
       </projectType>
       <configuration
             cleanCommand="rm -rf"
-            id="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base"
+            id="org.eclipse.cdt.cross.arc.gnu.700.linux.configuration.base"
             name="GNU Toolchain for ARC 700 Configuration"
-            parent="org.eclipse.cdt.cross.arc.gnu.configuration.base">
+            parent="org.eclipse.cdt.cross.arc.gnu.configuration.base.700">
          <enablement
                attribute="artifactExtension"
                extensionAdjustment="false"
@@ -5362,9 +5362,9 @@
       </toolChain>
       <configuration
             cleanCommand="rm -rf"
-            id="org.eclipse.cdt.cross.arc.gnu.eb.linux.configuration.base"
+            id="org.eclipse.cdt.cross.arc.gnu.eb.hs.linux.configuration.base"
             name="GNU Toolchain for ARC HS (big-endian) Configuration"
-            parent="org.eclipse.cdt.cross.arc.gnu.configuration.base">
+            parent="org.eclipse.cdt.cross.arc.gnu.eb.configuration.base.hs">
          <enablement
                attribute="artifactExtension"
                extensionAdjustment="false"
@@ -5385,7 +5385,7 @@
                buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug"
                id="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.elf.debug"
                name="Debug"
-               parent="org.eclipse.cdt.cross.arc.gnu.eb.linux.configuration.base.hs">
+               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
             <toolChain
                   id="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.elf.toolchain.debug"
                   isAbstract="false"
@@ -5435,7 +5435,7 @@
                buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release"
                id="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.elf.release"
                name="Release"
-               parent="org.eclipse.cdt.cross.arc.gnu.eb.hs.linux.configuration.base.hs">
+               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
             <toolChain
                   id="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.elf.toolchain.release"
                   isAbstract="false"
@@ -5483,9 +5483,9 @@
       </projectType>
       <configuration
             cleanCommand="rm -rf"
-            id="org.eclipse.cdt.cross.arc.gnu.eb.linux.configuration.base"
+            id="org.eclipse.cdt.cross.arc.gnu.eb.700.linux.configuration.base"
             name="GNU Toolchain for ARC 700 (big-endian) Configuration"
-            parent="org.eclipse.cdt.cross.arc.gnu.configuration.base">
+            parent="org.eclipse.cdt.cross.arc.gnu.eb.configuration.base.700">
          <enablement
                attribute="artifactExtension"
                extensionAdjustment="false"
@@ -5506,7 +5506,7 @@
                buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug"
                id="org.eclipse.cdt.cross.arc.gnu.700.eb.linux.elf.debug"
                name="Debug"
-               parent="org.eclipse.cdt.cross.arc.gnu.eb.linux.configuration.base.700">
+               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
             <toolChain
                   id="org.eclipse.cdt.cross.arc.gnu.700.eb.linux.elf.toolchain.debug"
                   isAbstract="false"
@@ -5556,7 +5556,7 @@
                buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release"
                id="org.eclipse.cdt.cross.arc.gnu.700.eb.linux.elf.release"
                name="Release"
-               parent="org.eclipse.cdt.cross.arc.gnu.eb.linux.configuration.base.700">
+               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
             <toolChain
                   id="org.eclipse.cdt.cross.arc.gnu.700.eb.linux.elf.toolchain.release"
                   isAbstract="false"
@@ -5936,7 +5936,7 @@
                buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug"
                id="org.eclipse.cdt.cross.arc.gnu.600.eb.linux.elf.debug"
                name="Debug"
-               parent="org.eclipse.cdt.cross.arc.gnu.eb.linux.configuration.base.600">
+               parent="org.eclipse.cdt.cross.arc.gnu.600.linux.configuration.base">
             <toolChain
                   id="org.eclipse.cdt.cross.arc.gnu.600.eb.linux.elf.toolchain.debug"
                   isAbstract="false"
@@ -5986,7 +5986,7 @@
                buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release"
                id="org.eclipse.cdt.cross.arc.gnu.600.eb.linux.elf.release"
                name="Release"
-               parent="org.eclipse.cdt.cross.arc.gnu.eb.linux.configuration.base.600">
+               parent="org.eclipse.cdt.cross.arc.gnu.600.linux.configuration.base">
             <toolChain
                   id="org.eclipse.cdt.cross.arc.gnu.600.eb.linux.elf.toolchain.release"
                   isAbstract="false"
@@ -6349,9 +6349,9 @@
       </toolChain>
       <configuration
             cleanCommand="rm -rf"
-            id="org.eclipse.cdt.cross.arc.gnu.eb.linux.configuration.base"
+            id="org.eclipse.cdt.cross.arc.gnu.eb.600.linux.configuration.base"
             name="GNU Toolchain for ARC 600 (big-endian) Configuration"
-            parent="org.eclipse.cdt.cross.arc.gnu.configuration.base">
+            parent="org.eclipse.cdt.cross.arc.gnu.eb.configuration.base.600">
          <enablement
                attribute="artifactExtension"
                extensionAdjustment="false"
@@ -6465,7 +6465,7 @@
                buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug"
                id="org.eclipse.cdt.cross.arc.gnu.600.linux.lib.debug"
                name="Debug"
-               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base.600">
+               parent="org.eclipse.cdt.cross.arc.gnu.600.linux.configuration.base">
             <toolChain
                   id="org.eclipse.cdt.cross.arc.gnu.600.linux.lib.toolchain.debug"
                   isAbstract="false"
@@ -6509,7 +6509,7 @@
                buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release"
                id="org.eclipse.cdt.cross.arc.gnu.600.linux.lib.release"
                name="Release"
-               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base.600">
+               parent="org.eclipse.cdt.cross.arc.gnu.600.linux.configuration.base">
             <toolChain
                   id="org.eclipse.cdt.cross.arc.gnu.600.linux.lib.toolchain.release"
                   isAbstract="false"
@@ -6558,7 +6558,7 @@
                buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug"
                id="org.eclipse.cdt.cross.arc.gnu.hs.linux.lib.debug"
                name="Debug"
-               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base.hs">
+               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
             <toolChain
                   id="org.eclipse.cdt.cross.arc.gnu.hs.linux.lib.toolchain.debug"
                   isAbstract="false"
@@ -6602,7 +6602,7 @@
                buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release"
                id="org.eclipse.cdt.cross.arc.gnu.hs.linux.lib.release"
                name="Release"
-               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base.hs">
+               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
             <toolChain
                   id="org.eclipse.cdt.cross.arc.gnu.hs.linux.lib.toolchain.release"
                   isAbstract="false"
@@ -6651,7 +6651,7 @@
                buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug"
                id="org.eclipse.cdt.cross.arc.gnu.700.eb.linux.lib.debug"
                name="Debug"
-               parent="org.eclipse.cdt.cross.arc.gnu.eb.linux.configuration.base.700">
+               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
             <toolChain
                   id="org.eclipse.cdt.cross.arc.gnu.700.eb.linux.lib.toolchain.debug"
                   isAbstract="false"
@@ -6694,7 +6694,8 @@
                artifactExtension="a"
                buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release"
                id="org.eclipse.cdt.cross.arc.gnu.700.eb.linux.lib.release"
-               name="Release">
+               name="Release"
+               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
             <toolChain
                   id="org.eclipse.cdt.cross.arc.gnu.700.eb.linux.lib.toolchain.release"
                   isAbstract="false"
