Add AXS102 project templates for HS34 and HS36 cores
These templates replace a generic AXS102 project template.
AXS102 uses slightly different memory maps for HS34 and HS36 cores.
HS34 has additional memory mappings for ICCM and DCCM:

    ICCM : ORIGIN = 0x10000000, LENGTH = 64K
    DCCM : ORIGIN = 0xC0000000, LENGTH = 64K

Signed-off-by: Yuriy Kolerov <yuriy.kolerov@synopsys.com>

--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/AXS102_HS34_Empty_C_Project/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/AXS102_HS34_Empty_C_Project/template.properties
@@ -11,7 +11,7 @@
 ###############################################################################
 
 #Template Default Values
-Emptyaxs102.Ctemplate.label=Empty Project For AXS102
-Emptyaxs102.Ctemplate.description=A skeletal Managed C project for ARC AXS101 SDP. Creates a folder for sources and contains linker script and crt0 start file.
-Emptyaxs102.basics.label=Basic Settings
-Emptyaxs102.basics.description=Basic properties of a project
+Emptyaxs102hs34.Ctemplate.label=Empty Project For AXS102 HS34
+Emptyaxs102hs34.Ctemplate.description=A skeletal Managed C project for ARC AXS102 SDP (HS34). Creates a folder for sources and contains linker script.
+Emptyaxs102hs34.basics.label=Basic Settings
+Emptyaxs102hs34.basics.description=Basic properties of a project
