--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/AXS102_HS36_Empty_CPP_Project/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/AXS102_HS36_Empty_CPP_Project/template.properties
@@ -11,7 +11,7 @@
 ###############################################################################
 
 #Template Default Values
-Emptyaxs102.CCtemplate.label=Empty Project For AXS102
-Emptyaxs102.CCtemplate.description=A skeletal Managed C++ project for ARC AXS101 SDP. Creates a folder for sources and contains linker script and crt0 start file.
-Emptyaxs102.basics.label=Basic Settings
-Emptyaxs102.basics.description=Basic properties of a project
+Emptyaxs102hs36.CCtemplate.label=Empty Project For AXS102 HS36
+Emptyaxs102hs36.CCtemplate.description=A skeletal Managed C++ project for ARC AXS102 SDP (HS36). Creates a folder for sources and contains linker script.
+Emptyaxs102hs36.basics.label=Basic Settings
+Emptyaxs102hs36.basics.description=Basic properties of a project
