9000952043 Show error message in GDB tab if filepath is invalid or empty
To make it work it's necessary to turn on validation on key stroke for
file fields in GDB's tab and implement RemoteGDBDebuggerPage.isValid
method.

Signed-off-by: Yunlu Zhang <Yunlu.Zhang@synopsys.com>
Signed-off-by: Yuriy Kolerov <yuriy.kolerov@synopsys.com>

--- a/com.arc.embeddedcdt/plugin.xml
+++ b/com.arc.embeddedcdt/plugin.xml
@@ -33,7 +33,6 @@
             class="com.arc.embeddedcdt.gui.LaunchConfigurationTabGroup"
             id="com.arc.embeddedcdt.TabGroup">
          <launchMode
-               description="ARCApplicationTabGroupDescription.debug"
                mode="debug"
                perspective="org.eclipse.debug.ui.DebugPerspective">
          </launchMode>
@@ -44,8 +43,7 @@
             id="com.arc.embeddedcdt.TabGroup">
             <launchMode 
                   mode="debug"
-                  perspective="org.eclipse.debug.ui.DebugPerspective"
-                  description="ARCApplicationTabGroupDescription.debug">
+                  perspective="org.eclipse.debug.ui.DebugPerspective">
             </launchMode>
       </launchConfigurationTabGroup>
       <launchConfigurationTabGroup
