Add --specs=nsim.specs to elf32 linker options
It is required to pass this option to the GCC driver when linking
applications with new newlib/libgloss in 2015.12 release.

Signed-off-by: Anna Pologova <anna.pologova@synopsys.com>

--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -1629,6 +1629,7 @@
          </option>
          <option
                category="org.eclipse.cdt.cross.arc.gnu.c.link.category.other"
+               defaultValue="--specs=nsim.specs"
                id="org.eclipse.cdt.cross.arc.gnu.c.link.option.otherflags"
                name="Other flags"
                valueType="string">
@@ -1796,6 +1797,7 @@
          </option>
          <option
                category="org.eclipse.cdt.cross.arc.gnu.cpp.link.category.other"
+               defaultValue="--specs=nsim.specs"
                id="org.eclipse.cdt.cross.arc.gnu.cpp.link.option.otherflags"
                name="Other flags"
                valueType="string">
